crates/strider-analyze/tests/snapshots/v2__aarch64__stack__large_local_array.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v4" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "3" -> "v2" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v7" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v7" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v11" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v11" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v13" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "12" -> "v13" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v14" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "12" -> "v14" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "10" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "16" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v14" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v13" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "17" -> "v11" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v18" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "17" -> "v18" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "16" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "20" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v7" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v18" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v22" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v22" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "23" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v24" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "23" -> "v24" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "23" -> "v22" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "21" -> "23" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "26" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v24" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "29" -> "26" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "30" -> "26" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "31" -> "26" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "31" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "32" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="φ x1", shape=house, fillcolor="#163030"];
  "21" -> "35" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "29" -> "35" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "37" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "27" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "40" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="ShiftLeft:u64", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "33" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "45" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0xffffffffffffffc0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="φ Mem", shape=house, fillcolor="#163030"];
  "20" -> "27" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "47" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "49" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "51" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="φ x1", shape=house, fillcolor="#163030"];
  "10" -> "53" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "54" -> "53" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "56" -> "54" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "41" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="ShiftLeft:u64", shape=box, fillcolor="#2d2d2d"];
  "59" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "52" -> "59" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="φ Mem", shape=house, fillcolor="#163030"];
  "10" -> "49" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "48" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "61" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "62" -> "47" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "63" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "41" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="ShiftLeft:u64", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "67" -> "65" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "67" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "68" -> "67" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "68" [label="φ x1", shape=house, fillcolor="#163030"];
  "1" -> "68" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "69" -> "68" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "70" -> "68" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "71" -> "69" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "71" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "67" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "61" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "47" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "73" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "73" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "38" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "74" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "74" [label="φ x0", shape=house, fillcolor="#163030"];
  "21" -> "74" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "28" -> "74" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "75" -> "74" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "76" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "76" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="const 0xfffffff1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "79" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "81" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "81" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "82" -> "81" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" -> "81" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="φ OV", shape=house, fillcolor="#163030"];
  "16" -> "83" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "84" -> "83" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "84" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "85" -> "83" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "85" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "86" -> "85" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "86" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "86" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "87" -> "86" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "87" [label="const 0xf:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "82" [label="φ NG", shape=house, fillcolor="#163030"];
  "16" -> "82" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "88" -> "82" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "88" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "89" -> "82" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "89" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "90" -> "89" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "90" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "91" -> "90" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "92" -> "90" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "92" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "91" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "91" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "93" -> "91" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "93" [label="const 0xfffffff2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "79" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "94" -> "79" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "94" [label="φ ZR", shape=house, fillcolor="#163030"];
  "16" -> "94" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "95" -> "94" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "95" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "96" -> "94" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "96" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "97" -> "96" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "97" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "91" -> "97" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "98" -> "97" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "98" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "99" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "99" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "100" -> "99" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "100" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "101" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "102" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "102" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "103" -> "102" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "103" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "104" -> "103" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "105" -> "103" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "105" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "106" -> "105" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "106" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "107" -> "106" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "108" -> "106" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "108" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "107" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "100" -> "107" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "104" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "109" -> "104" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "109" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "107" -> "109" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "110" -> "109" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "110" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "101" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "107" -> "101" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "111" -> "101" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "111" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "112" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "113" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "113" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "112" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "67" -> "112" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "114" -> "112" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "114" [label="const 0xfffffff1:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
